# recipe-management-system

./: Cargo.toml  README.md  docker-compose.yaml
backend/: Cargo.toml  README.md  diesel.toml
backend/migrations/2024-08-25-201807_create_recipes/: down.sql  up.sql
backend/migrations/2024-08-25-201816_create_ingredients/: down.sql  up.sql
backend/src/: main.rs  schema.rs
backend/src/recipes/: mod.rs  routes.rs
cli/: Cargo.toml  README.md
cli/src/: error.rs  main.rs
cli/src/command/: mod.rs
cli/src/command/recipe/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
common/: Cargo.toml  README.md
common/src/: lib.rs
frontend/: Cargo.toml  README.md
