[workspace]
members = ["backend", "cli", "common", "frontend"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5.16", features = ["derive"] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
log = "0.4.22"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.208", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
